# conway

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/Conway/: App.hpp  Block.hpp  General.hpp
includes/CGLife/: CGLife.h  Pixel.h  Util.h
src/: App.cpp  Block.cpp  CGLife.cpp  General.cpp  Pixel.cpp  main.cpp
src/.old/: General.cpp
